<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.nrw.hbz.to.science.api</groupId>
	<artifactId>Api</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>ToolboxOpenScience-Api</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<encoding>UTF-8</encoding>
		<scala.version>2.12.6</scala.version>
		<play2scala.version>2.12</play2scala.version>
		<play2.version>2.6.14</play2.version>
		<jar.plugin.version>3.1.0</jar.plugin.version>
		<sbt-compiler.plugin.version>1.0.0</sbt-compiler.plugin.version>
		<play2.plugin.version>1.0.0-rc5</play2.plugin.version>
		<twirl.plugin.version>1.2.0</twirl.plugin.version>
		<twirl.version>1.3.15</twirl.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala.version}</version>
		</dependency>
		<dependency>
			<groupId>org.scalatestplus.play</groupId>
			<artifactId>scalatestplus-play_${play2scala.version}</artifactId>
			<version>4.0.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-server_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
			<type>maven-plugin</type>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>twirl-api_2.12</artifactId>
			<version>${twirl.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-java_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>filters-helpers_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-akka-http-server_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-logback_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-ws_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.play2-maven-plugin</groupId>
			<artifactId>play2-provider-api</artifactId>
			<version>${play2.plugin.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-jdbc_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-jdbc-evolutions_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-test_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-java-forms_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-guice_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-json_2.12</artifactId>
			<version>${play2.version}</version>
		</dependency>

		<!-- Work around for deprecated WS-Class, has to be replaced by Injected 
			Class, Method see: https://www.playframework.com/documentation/2.6.x/WSMigration26 -->
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-ahc-ws_${play2scala.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.1.0.Final</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.3.3</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.3.3</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.eclipse.rdf4j</groupId>
			<artifactId>rdf4j-core</artifactId>
			<version>2.2.2</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.eclipse.rdf4j</groupId>
			<artifactId>rdf4j-rio-api</artifactId>
			<version>2.2.2</version>
		</dependency>
		<dependency>
			<groupId>javax.el</groupId>
			<artifactId>javax.el-api</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.4.01</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.typesafe.play/play-ws -->
		<dependency>
			<groupId>net.sf.supercsv</groupId>
			<artifactId>super-csv</artifactId>
			<version>2.4.0</version>
		</dependency>
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>1.5.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.jsonld-java</groupId>
			<artifactId>jsonld-java</artifactId>
			<version>0.8.3</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.hbz.lobid-to-json</groupId>
			<artifactId>lobid-to-json</artifactId>
			<version>0.1.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.wordnik/swagger-core -->
		<dependency>
			<groupId>com.wordnik</groupId>
			<artifactId>swagger-core_2.11</artifactId>
			<version>1.3.8</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20220320</version>
		</dependency>
		<dependency>
			<groupId>io.github.hbz</groupId>
			<artifactId>to.science.core</artifactId>
			<version>1.3.5</version>
		</dependency>		
	</dependencies>
	<build>
		<sourceDirectory>${project.basedir}/app</sourceDirectory>
		<testSourceDirectory>${project.basedir}/test</testSourceDirectory>
		<resources>
			<resource>
				<directory>${project.basedir}/conf</directory>
			</resource>
			<resource>
				<directory>${project.basedir}/public</directory>
				<targetPath>public</targetPath>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<skipMain>true</skipMain> <!-- skip compile -->
					<skip>true</skip> <!-- skip testCompile -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.code.sbt-compiler-maven-plugin</groupId>
				<artifactId>sbt-compiler-maven-plugin</artifactId>
				<version>${sbt-compiler.plugin.version}</version>
				<executions>
					<execution>
						<id>default-sbt-compile</id>
						<goals>
							<goal>compile</goal>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.google.code.play2-maven-plugin</groupId>
				<artifactId>play2-maven-plugin</artifactId>
				<version>${play2.plugin.version}</version>
				<extensions>true</extensions>
				<configuration>
					<routesGenerator>injected</routesGenerator>
					<serverJvmArgs>-Dplay.evolutions.db.default.autoApply=true</serverJvmArgs>
					<templateAdditionalImports>play.data._
						play.core.j.PlayFormsMagicForJava._</templateAdditionalImports>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.jakewharton.twirl</groupId>
				<artifactId>twirl-maven-plugin</artifactId>
				<version>${twirl.plugin.version}</version>
				<configuration>
					<templateDirectory>${project.basedir}/app</templateDirectory>
				</configuration>
				
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>eclipse</id>

			<activation>
				<property>
					<name>m2e.version</name> <!-- for automatic profile activation -->
				</property>
			</activation>

			<build>
				<directory>${project.basedir}/target-eclipse</directory>

				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.5.1</version>
						<configuration>
							<skipMain>true</skipMain>
							<skip>true</skip>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
						<executions>
							<execution>
								<id>default-compile</id>
								<goals>
									<goal>compile</goal>
								</goals>
							</execution>
							<execution>
								<id>default-testCompile</id>
								<goals>
									<goal>testCompile</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
